New Update for enVision Magazine

--- a/enVision-Magazine/arts.html
+++ b/enVision-Magazine/arts.html
@@ -53,8 +53,8 @@
     </div>
 
     <div class="articles">
+        <h1> Arts Articles </h1>
         <div class="arti">
-            <h1> Arts Articles </h1>
             <div class="tag">Arts</div>
             <img src="images/van-gogh.jpeg">
             <h3> Van Gogh </h3>
@@ -83,7 +83,7 @@
     </div>
 
     <div class="stories">
-        <h1> Top Stories</h1>
+        <h1 class="storiesTitle"> Top Stories</h1>
         <a href="enVisionMagazine-top.html" onclick="localStorage.setItem('activeStory', 'charles-dickens');" style="text-decoration: none; color: inherit;">
             <div class="str strTop" data-id="charles-dickens">
                 <h3> Charles Dickens </h3>
