--- a/enVision-Magazine/enVisionMagazine-ho3.html
+++ b/enVision-Magazine/enVisionMagazine-ho3.html
@@ -7,7 +7,7 @@
 <head>
 <title> enVisionMagazine </title>
 <link href="css/styleVM.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/indexVM.js"></script>
 </head>
     <body>
         <header>
@@ -29,30 +29,31 @@
 <section class="allContent">
     <div class="list">
         <h4> Humanities </h4>
-            <h5> Spirituality & Philosophy </h5>
-            <h5> Langauges </h5>
-            <h5> History </h5>
-            <h5> Geography </h5>
-            <h5> Politics </h5>
-            <h5> Arts </h5>
+            <a href="spirituality&philosohoy.html"><h5> Spirituality & Philosophy </h5></a>
+            <a href="languages.html"><h5> Langauges </h5></a>
+            <a href="history.html"><h5> History </h5></a>
+            <a href="geography.html"><h5> Geography </h5></a>
+            <a href="politics.html"><h5> Politics </h5></a>
+            <a href="arts.html"><h5> Arts </h5></a>
         <h4> Science </h4>
-            <h5> Biology </h5>
-            <h5> Health </h5>
-            <h5> Chemistry </h5>
-            <h5> Physics </h5>
-            <h5> Astronomy </h5>
-            <h5> Technology </h5>
-            <h5> Social Sciences </h5>
-            <h5> Economics </h5>
+            <a href="biology.html"><h5> Biology </h5></a>
+            <a href="health.html"><h5> Health </h5></a>
+            <a href="chemistry.html"><h5> Chemistry </h5></a>
+            <a href="Mathematics.html"><h5> Mathematics </h5></a>
+            <a href="physics.html"><h5> Physics </h5></a>
+            <a href="astronomy.html"><h5> Astronomy </h5></a>
+            <a href="technology.html"><h5> Technology </h5></a>
+            <a href="social.html"><h5> Social Sciences </h5></a>
+            <a href="economics.html"><h5> Economics </h5></a>
         <h4> Others </h4>
-            <h5> Sports </h5>
-            <h5> Hobbies </h5>
-            <h5> Travel </h5>
-            <h5> Food </h5>       
+            <a href="sports.html"><h5> Sports </h5></a>
+            <a href="hobbies.html"><h5> Hobbies </h5></a>
+            <a href="travel.html"><h5> Travel </h5></a>
+            <a href="food.html"><h5> Food </h5></a>
     </div>
 
     <div class="articles">
-        <div class="arti">
+        <div class="arti full-arti">
             <div class="tag">Hobbies </div>
             <img src="images/garden.jpg">
             <h3>  Garden Design Development </h3>
@@ -67,7 +68,7 @@
     </div>
 
     <div class="stories">
-        <h1> Top Stories</h1>
+        <h1 class="storiesTitle"> Top Stories</h1>
         <a href="enVisionMagazine-top.html" onclick="localStorage.setItem('activeStory', 'charles-dickens');" style="text-decoration: none; color: inherit;">
             <div class="str strTop" data-id="charles-dickens">
                 <h3> Charles Dickens </h3>
