--- a/enVision-Magazine/enVisionMagazine.html
+++ b/enVision-Magazine/enVisionMagazine.html
@@ -53,9 +53,10 @@
     </div>
 
     <div class="articles">
+        <h1> Home Page </h1>
         <div class="arti">
             <div class="tag">History</div>
-            <img src="images/Napoleon.png">
+            <img src="images/Napoleon.jpeg">
             <h3> Napoleon Psychologoical Game </h3>
             <p>
               Napoleon Bonaparte was known for his strategic and tactical brilliance on the battlefield, and his military campaigns often… <br> <a href="enVisionMagazine-page.html">See More</a>
@@ -72,7 +73,7 @@
         </div>
         <div class="arti">
             <div class="tag">History</div>
-            <img src="images/Spies.png">
+            <img src="images/Spies.jpeg">
             <h3> Spies War in WWII </h3>
             <p>
               World War II featured extensive espionage and intelligence operations on all sides of the conflict… <br>
@@ -82,7 +83,7 @@
     </div>
 
     <div class="stories">
-        <h1> Top Stories</h1>
+        <h1 class="storiesTitle"> Top Stories</h1>
         <a href="enVisionMagazine-top.html" onclick="localStorage.setItem('activeStory', 'charles-dickens');" style="text-decoration: none; color: inherit;">
             <div class="str strTop" data-id="charles-dickens">
                 <h3> Charles Dickens </h3>
