--- a/enVision-Magazine/physics.html
+++ b/enVision-Magazine/physics.html
@@ -59,7 +59,7 @@
             <img src="images/archimedes.jpg">
             <h3> Archimedes: Eureka! </h3>
             <p>
-              In ancient Greece, Archimedes shouted “Eureka!” after discovering how to measure an object’s volume by water… <br> <a href="enVisionMagazine-p1.html">See More</a>
+              In ancient Greece, Archimedes shouted “Eureka!” after discovering how to measure an object’s volume by water… <br> <a href="enVisionMagazine-py1.html">See More</a>
             </p>
         </div>
         <div class="arti">
@@ -68,7 +68,7 @@
             <h3> Newton’s Apple </h3>
             <p>
              Legend says Isaac Newton saw an apple fall and asked why things fall down—not sideways or up… <br>
-             <a href="enVisionMagazine-p2.html">See More</a>
+             <a href="enVisionMagazine-py2.html">See More</a>
             </p> 
         </div>
         <div class="arti">
@@ -83,7 +83,7 @@
     </div>
 
     <div class="stories">
-        <h1> Top Stories</h1>
+        <h1 class="storiesTitle"> Top Stories</h1>
         <a href="enVisionMagazine-top.html" onclick="localStorage.setItem('activeStory', 'charles-dickens');" style="text-decoration: none; color: inherit;">
             <div class="str strTop" data-id="charles-dickens">
                 <h3> Charles Dickens </h3>
