--- a/enVision-Magazine/spirituality&philosohoy.html
+++ b/enVision-Magazine/spirituality&philosohoy.html
@@ -84,7 +84,7 @@
     </div>
 
     <div class="stories">
-        <h1> Top Stories</h1>
+        <h1 class="storiesTitle"> Top Stories</h1>
         <a href="enVisionMagazine-top.html" onclick="localStorage.setItem('activeStory', 'charles-dickens');" style="text-decoration: none; color: inherit;">
             <div class="str strTop" data-id="charles-dickens">
                 <h3> Charles Dickens </h3>
