--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="cirB" class="down cirV">
                 <img src="images/circleB.png" class="circle">
                 <img src="images/enVisionB.png" class="logoV logoB">
-                <a href="enVisionStatistics.html"><button id="btnB"> Statistics Website</button> </a>
+                <a href="enVision-Statistics/enVisionStatistics.html"><button id="btnB"> Statistics Website</button> </a>
             </div>
         </section>
     </body>
