--- a/enVision-Magazine/enVisionMagazine-page.html
+++ b/enVision-Magazine/enVisionMagazine-page.html
@@ -7,7 +7,7 @@
 <head>
 <title> enVisionMagazine </title>
 <link href="css/styleVM.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/indexVM.js"></script>
 </head>
     <body>
         <header>
@@ -29,32 +29,33 @@
 <section class="allContent">
     <div class="list">
         <h4> Humanities </h4>
-            <h5> Spirituality & Philosophy </h5>
-            <h5> Langauges </h5>
-            <h5> History </h5>
-            <h5> Geography </h5>
-            <h5> Politics </h5>
-            <h5> Arts </h5>
+            <a href="spirituality&philosohoy.html"><h5> Spirituality & Philosophy </h5></a>
+            <a href="languages.html"><h5> Langauges </h5></a>
+            <a href="history.html"><h5> History </h5></a>
+            <a href="geography.html"><h5> Geography </h5></a>
+            <a href="politics.html"><h5> Politics </h5></a>
+            <a href="arts.html"><h5> Arts </h5></a>
         <h4> Science </h4>
-            <h5> Biology </h5>
-            <h5> Health </h5>
-            <h5> Chemistry </h5>
-            <h5> Physics </h5>
-            <h5> Astronomy </h5>
-            <h5> Technology </h5>
-            <h5> Social Sciences </h5>
-            <h5> Economics </h5>
+            <a href="biology.html"><h5> Biology </h5></a>
+            <a href="health.html"><h5> Health </h5></a>
+            <a href="chemistry.html"><h5> Chemistry </h5></a>
+            <a href="Mathematics.html"><h5> Mathematics </h5></a>
+            <a href="physics.html"><h5> Physics </h5></a>
+            <a href="astronomy.html"><h5> Astronomy </h5></a>
+            <a href="technology.html"><h5> Technology </h5></a>
+            <a href="social.html"><h5> Social Sciences </h5></a>
+            <a href="economics.html"><h5> Economics </h5></a>
         <h4> Others </h4>
-            <h5> Sports </h5>
-            <h5> Hobbies </h5>
-            <h5> Travel </h5>
-            <h5> Food </h5>       
+            <a href="sports.html"><h5> Sports </h5></a>
+            <a href="hobbies.html"><h5> Hobbies </h5></a>
+            <a href="travel.html"><h5> Travel </h5></a>
+            <a href="food.html"><h5> Food </h5></a>
     </div>
 
     <div class="articles">
-        <div class="arti">
+        <div class="arti full-arti">
             <div class="tag">History</div>
-            <img src="images/Napoleon.png">
+            <img src="images/Napoleon.jpeg">
             <h3> Napoleon Psychologoical Game </h3>
             <p>
                 Napoleon Bonaparte was a brilliant military strategist whose campaigns reshaped Europe. Rising during the French Revolutionary Wars, he secured key victories like Toulon (1793) and in Italy (1796-1797). His Egyptian Campaign (1798) demonstrated his tactical genius despite strategic failure.<br>
@@ -69,13 +70,13 @@
                 <br>
                 <br>
                 Legacy <br>
-                Napoleon revolutionized military strategy with innovations like the corps system and emphasis on mobility. His impact
+                Napoleon revolutionized military strategy with innovations like the corps system and emphasis on mobility.
             </p>
         </div>
     </div>
 
     <div class="stories">
-        <h1> Top Stories</h1>
+        <h1 class="storiesTitle"> Top Stories</h1>
         <a href="enVisionMagazine-top.html" onclick="localStorage.setItem('activeStory', 'charles-dickens');" style="text-decoration: none; color: inherit;">
             <div class="str strTop" data-id="charles-dickens">
                 <h3> Charles Dickens </h3>
