--- a/enVision-Magazine/politics.html
+++ b/enVision-Magazine/politics.html
@@ -76,14 +76,14 @@
             <img src="images/totalitarianism.jpg">
             <h3> Totalitarianism </h3>
             <p>
-              WTotalitarianism is a form of government that seeks to control every aspect of public and private life… <br>
+              Totalitarianism is a form of government that seeks to control every aspect of public and private life… <br>
               <a href="enVisionMagazine-p3.html">See More</a>
             </p>
         </div>
     </div>
 
     <div class="stories">
-        <h1> Top Stories</h1>
+        <h1 class="storiesTitle"> Top Stories</h1>
         <a href="enVisionMagazine-top.html" onclick="localStorage.setItem('activeStory', 'charles-dickens');" style="text-decoration: none; color: inherit;">
             <div class="str strTop" data-id="charles-dickens">
                 <h3> Charles Dickens </h3>
