--- a/enVision-Magazine/history.html
+++ b/enVision-Magazine/history.html
@@ -56,7 +56,7 @@
         <h1> History Articles </h1>
         <div class="arti">
             <div class="tag">History</div>
-            <img src="images/Napoleon.png">
+            <img src="images/Napoleon.jpeg">
             <h3> Napoleon Psychologoical Game </h3>
             <p>
               Napoleon Bonaparte was known for his strategic and tactical brilliance on the battlefield, and his military campaigns often… <br> <a href="enVisionMagazine-page.html">See More</a>
@@ -73,7 +73,7 @@
         </div>
         <div class="arti">
             <div class="tag">History</div>
-            <img src="images/Spies.png">
+            <img src="images/Spies.jpeg">
             <h3> Spies War in WWII </h3>
             <p>
               World War II featured extensive espionage and intelligence operations on all sides of the conflict… <br>
