--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <title> enVision </title>
 <link href="css/style.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="js/index.js"></script>
+<style>
+    body {
+      background: url('images/background.png') no-repeat center center fixed;
+    }
+</style>
 </head>
     <body>
         <header>
