--- a/enVision-Documentaries/enVisionDocumentaries.html
+++ b/enVision-Documentaries/enVisionDocumentaries.html
@@ -6,114 +6,56 @@
 <html>
 <head>
 <title> enVisionMagazine </title>
-<link href="css/styleVM.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="js/indexVM.js"></script>
+<link href="css/styleVD.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="js/indexVD.js"></script>
 </head>
     <body>
         <header>
-             <div class="logo">
-                <img src="images/enVisionG.png">
+            <div class="top">
+                <div class="logo">
+                    <img src="images/enVisionO.png">
+                </div>
+                <nav>
+                    <a href="enVisionMagazine.html"> Home </a>
+                    <a href="about.html"> About </a>
+                    <a href="#contact"> Contact </a>
+                </nav>
+                <form>
+                    <button type="submit" class="searchButton"> <img src="images/searchIcon.svg"></button>
+                    <input type="text" name="query" placeholder="Search...">
+                </form>
             </div>
-            <nav>
-                <a href="enVisionMagazine.html"> Home </a>
-                <a href="about.html"> About </a>
-                <a href="#contact"> Contact </a>
-            </nav>
-            <form>
-                <button type="submit" class="searchButton"> <img src="images/searchIcon.svg"></button>
-                <input type="text" name="query" placeholder="Search...">
-            </form>
+            <h2 class="title"> Your Favourites </h2>
+            <div class="favourites">
+                <img src="images/favourite1.png" class="fav1"/>
+                <img src="images/favourite2.png" class="fav2"/>
+                <img src="images/favourite3.png" class="fav3"/>
+                <img src="images/favourite4.png" class="fav4"/>
+            </div>
        </header>
-
-<h2> Digital Magazine for diverse topics </h2>
-<section class="allContent">
-    <div class="list">
-        <h4> Humanities </h4>
-            <a href="spirituality&philosohoy.html"><h5> Spirituality & Philosophy </h5></a>
-            <a href="languages.html"><h5> Langauges </h5></a>
-            <a href="history.html"><h5> History </h5></a>
-            <a href="geography.html"><h5> Geography </h5></a>
-            <a href="politics.html"><h5> Politics </h5></a>
-            <a href="arts.html"><h5> Arts </h5></a>
-        <h4> Science </h4>
-            <a href="biology.html"><h5> Biology </h5></a>
-            <a href="health.html"><h5> Health </h5></a>
-            <a href="chemistry.html"><h5> Chemistry </h5></a>
-            <a href="Mathematics.html"><h5> Mathematics </h5></a>
-            <a href="physics.html"><h5> Physics </h5></a>
-            <a href="astronomy.html"><h5> Astronomy </h5></a>
-            <a href="technology.html"><h5> Technology </h5></a>
-            <a href="social.html"><h5> Social Sciences </h5></a>
-            <a href="economics.html"><h5> Economics </h5></a>
-        <h4> Others </h4>
-            <a href="sports.html"><h5> Sports </h5></a>
-            <a href="hobbies.html"><h5> Hobbies </h5></a>
-            <a href="travel.html"><h5> Travel </h5></a>
-            <a href="food.html"><h5> Food </h5></a>
-    </div>
-
-    <div class="articles">
-        <h1> Home Page </h1>
-        <div class="arti">
-            <div class="tag">History</div>
-            <img src="images/Napoleon.jpeg">
-            <h3> Napoleon Psychologoical Game </h3>
-            <p>
-              Napoleon Bonaparte was known for his strategic and tactical brilliance on the battlefield, and his military campaigns often… <br> <a href="enVisionMagazine-page.html">See More</a>
-            </p>
-        </div>
-        <div class="arti">
-            <div class="tag">Arts</div>
-            <img src="images/Beethoven.png">
-            <h3> Beethoven Best Moment </h3>
-            <p>
-             Ludwig van Beethoven, the renowned composer and pianist, had numerous significant moments and… <br>
-             <a href="enVisionMagazine-page2.html">See More</a>
-            </p> 
-        </div>
-        <div class="arti">
-            <div class="tag">History</div>
-            <img src="images/Spies.jpeg">
-            <h3> Spies War in WWII </h3>
-            <p>
-              World War II featured extensive espionage and intelligence operations on all sides of the conflict… <br>
-              <a href="enVisionMagazine-page3.html">See More</a>
-            </p>
-        </div>
-    </div>
-
-    <div class="stories">
-        <h1 class="storiesTitle"> Top Stories</h1>
-        <a href="enVisionMagazine-top.html" onclick="localStorage.setItem('activeStory', 'charles-dickens');" style="text-decoration: none; color: inherit;">
-            <div class="str strTop" data-id="charles-dickens">
-                <h3> Charles Dickens </h3>
-                <p> 
-                    Charles Dickens (1812-1870) was a renowned English novelist and social critic, widely regarded as one of the greatest writers of the Victorian era. 
-                </p> 
+       <section class="allContent">
+            <div class="views">
+                <h3> Most Views </h3>
+                <div class="viewsImages">
+                    <img src="images/views1.png" class="views1"/>
+                    <img src="images/views2.png" class="views2"/>
+                    <img src="images/views3.png" class="views3"/>
+                </div>
             </div>
-        </a>
-        <a href="enVisionMagazine-top2.html" onclick="localStorage.setItem('activeStory', 'light-speed');" style="text-decoration: none; color: inherit;">
-            <div class="str strR" data-id="light-speed">
-                <h3> Light Speed </h3>
-                <p> 
-                    Light travels through space at a constant speed of approximately 186,282 miles per second (299,792 kilometers per second) in a vacuum.
-                </p>  
+            <div class="rates">
+                <h3> Highest Rates </h3>
+                <div class="ratesImages">
+                    <img src="images/rates1.png" class="rates1"/>
+                    <img src="images/rates2.png" class="rates2"/>
+                    <img src="images/rates3.png" class="rates3"/>
+                </div>
             </div>
-        </a>
-        <a href="enVisionMagazine-top3.html" onclick="localStorage.setItem('activeStory', 'bees-life');" style="text-decoration: none; color: inherit;">
-            <div class="str strR" data-id="bees-life"> 
-                <h3> Bees Life </h3>
-                <p> 
-                    Bees are fascinating insects with complex and highly organized social lives. 
-                </p> 
-            </div>
-        </a>
-    </div>
+
     
-</section>
+       </section>
 <!-- Footer -->
 
-<footer>
+<footer id="contact">
 <p> Copyright innovi 2022 -2024 </p>
 <div class="socials">
     <img src="images/facebook.png" >
