Update & Add articles pages 1

--- a/enVision-Magazine/enVisionMagazine-a3.html
+++ b/enVision-Magazine/enVisionMagazine-a3.html
@@ -62,16 +62,15 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Astronomy </div>
-            <img src="images/copernicus.jpg">
-            <h3> Nicolaus Copernicus: Sun-Centered Universe </h3>
+            <div class="tag">Arts </div>
+            <img src="images/surrealism.jpeg">
+            <h3> Surrealism Beginnings </h3>
             <p>
-            In the 1500s, Nicolaus Copernicus dared to challenge Earth-centered beliefs. He proposed that the Sun—not Earth—was at the universe's center.<br>
+            Surrealism began in the early 1920s, born from the ashes of World War I and shaped by Dadaism’s rejection of reason. French poet André Breton’s Surrealist Manifesto (1924) declared it a revolution of the unconscious—art rooted in dreams, chance, and free association. <br>
             <br>
-            His heliocentric model contradicted church doctrine and sparked the Scientific Revolution. Though resisted at first, his idea later influenced Kepler, Galileo, and Newton.<br>
+            Influenced by Freud’s psychoanalysis, surrealists like Salvador Dalí, Max Ernst, and René Magritte created bizarre, dreamlike imagery. Melting clocks, floating objects, and impossible scenes challenged logic and celebrated the irrational.<br>
             <br>
-            Copernicus didn’t just move the planets—he moved humanity's perspective, placing us in a vast, dynamic cosmos.
-            </p>
+            Surrealism wasn’t just art—it was a movement to free thought from societal constraints and reveal hidden realities beneath the surface of everyday life.
         </div>
                 <div id="interactives">
           <div class="icon-container">
