--- a/enVision-Magazine/enVisionMagazine-a4.html
+++ b/enVision-Magazine/enVisionMagazine-a4.html
@@ -62,15 +62,15 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Astronomy </div>
-            <img src="images/copernicus.jpg">
-            <h3> Nicolaus Copernicus: Sun-Centered Universe </h3>
+            <div class="tag">Arts </div>
+            <img src="images/romanticism.jpg">
+            <h3> The Romanticism Era in Art </h3>
             <p>
-            In the 1500s, Nicolaus Copernicus dared to challenge Earth-centered beliefs. He proposed that the Sun—not Earth—was at the universe's center.<br>
+            The Romanticism era, spanning the late 18th to mid-19th centuries, celebrated emotion, imagination, and nature over reason and order. Artists like Francisco Goya, Eugène Delacroix, and J.M.W. Turner painted vivid, dramatic scenes that captured human passion and the sublime power of landscapes. <br>
             <br>
-            His heliocentric model contradicted church doctrine and sparked the Scientific Revolution. Though resisted at first, his idea later influenced Kepler, Galileo, and Newton.<br>
+            Romanticism arose as a reaction against the rationalism of the Enlightenment and the rigid structure of Neoclassicism. It sought to free artistic expression, valuing individual feeling and national identity.<br>
             <br>
-            Copernicus didn’t just move the planets—he moved humanity's perspective, placing us in a vast, dynamic cosmos.
+            Beyond painting, Romanticism influenced literature and music, shaping cultural identity across Europe. The movement remains celebrated for emphasizing the beauty and power of human emotions in art.
             </p>
         </div>
                 <div id="interactives">
