--- a/enVision-Magazine/enVisionMagazine-a5.html
+++ b/enVision-Magazine/enVisionMagazine-a5.html
@@ -62,16 +62,15 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Astronomy </div>
-            <img src="images/copernicus.jpg">
-            <h3> Nicolaus Copernicus: Sun-Centered Universe </h3>
+            <div class="tag">Arts </div>
+            <img src="images/bauhaus.jpg">
+            <h3> The Bauhaus Effect </h3>
             <p>
-            In the 1500s, Nicolaus Copernicus dared to challenge Earth-centered beliefs. He proposed that the Sun—not Earth—was at the universe's center.<br>
+            Founded in Germany in 1919 by Walter Gropius, the Bauhaus school revolutionized art, design, and architecture. It emphasized functionality, simplicity, and the fusion of crafts with modern technology. <br>
             <br>
-            His heliocentric model contradicted church doctrine and sparked the Scientific Revolution. Though resisted at first, his idea later influenced Kepler, Galileo, and Newton.<br>
+            Bauhaus design favored clean lines, geometric shapes, and minimal ornamentation, influencing everything from furniture to buildings. Its philosophy spread globally after the school closed under Nazi pressure in 1933, inspiring modernist architecture and contemporary product design.<br>
             <br>
-            Copernicus didn’t just move the planets—he moved humanity's perspective, placing us in a vast, dynamic cosmos.
-            </p>
+            The Bauhaus effect is seen today in minimalist design trends, where form follows function. It remains a landmark in creative history, blending practicality with beauty and shaping how we live and interact with objects.
         </div>
                 <div id="interactives">
           <div class="icon-container">
