--- a/enVision-Magazine/enVisionMagazine-ay4.html
+++ b/enVision-Magazine/enVisionMagazine-ay4.html
@@ -63,14 +63,14 @@
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Astronomy </div>
-            <img src="images/copernicus.jpg">
-            <h3> Nicolaus Copernicus: Sun-Centered Universe </h3>
+            <img src="images/earth-twin.jpg">
+            <h3> Earth’s Twin: The Mystery of Venus </h3>
             <p>
-            In the 1500s, Nicolaus Copernicus dared to challenge Earth-centered beliefs. He proposed that the Sun—not Earth—was at the universe's center.<br>
+            Often called Earth’s twin due to its similar size and composition, Venus presents a stark contrast to our planet. With thick clouds of carbon dioxide, crushing pressure, and surface temperatures hot enough to melt lead, it is one of the most hostile places in the solar system.<br>
             <br>
-            His heliocentric model contradicted church doctrine and sparked the Scientific Revolution. Though resisted at first, his idea later influenced Kepler, Galileo, and Newton.<br>
+            Venus helps scientists understand climate change, as its runaway greenhouse effect warns of atmospheric imbalance.<br>
             <br>
-            Copernicus didn’t just move the planets—he moved humanity's perspective, placing us in a vast, dynamic cosmos.
+            Despite its dangers, Venus fascinates researchers searching for Earth-like worlds. Missions continue to probe its atmosphere and geology, seeking clues to planetary evolution. Venus, Earth’s twin in form but not in fate, remains a cosmic enigma.
             </p>
         </div>
                 <div id="interactives">
@@ -171,7 +171,7 @@
 </footer>
 
 <!-- Footer -->
- 
+
 <script type="module" src="js/static-interactives.js"> </script>
 
 	</body>
