--- a/enVision-Magazine/enVisionMagazine-ay5.html
+++ b/enVision-Magazine/enVisionMagazine-ay5.html
@@ -63,14 +63,14 @@
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Astronomy </div>
-            <img src="images/copernicus.jpg">
-            <h3> Nicolaus Copernicus: Sun-Centered Universe </h3>
+            <img src="images/sky-past.jpg">
+            <h3> The Sky: A Glimpse into the Past </h3>
             <p>
-            In the 1500s, Nicolaus Copernicus dared to challenge Earth-centered beliefs. He proposed that the Sun—not Earth—was at the universe's center.<br>
+            When we gaze at the night sky, we are not seeing stars as they are now, but as they were in the past. Light from nearby stars takes years to reach Earth, while distant galaxies appear as they existed millions or even billions of years ago.<br>
             <br>
-            His heliocentric model contradicted church doctrine and sparked the Scientific Revolution. Though resisted at first, his idea later influenced Kepler, Galileo, and Newton.<br>
+            In this sense, the sky is a time machine, offering a glimpse into cosmic history. Observing the heavens allows astronomers to study the universe’s formation, evolution, and expansion.<br>
             <br>
-            Copernicus didn’t just move the planets—he moved humanity's perspective, placing us in a vast, dynamic cosmos.
+            The stars remind us of our place in a vast cosmos, where every glance upward connects us to ancient light and distant cosmic stories.
             </p>
         </div>
                 <div id="interactives">
@@ -171,7 +171,7 @@
 </footer>
 
 <!-- Footer -->
- 
+
 <script type="module" src="js/static-interactives.js"> </script>
 
 	</body>
