Update & Add articles pages 2

--- a/enVision-Magazine/enVisionMagazine-b3.html
+++ b/enVision-Magazine/enVisionMagazine-b3.html
@@ -7,7 +7,7 @@
 <head>
 <title> enVisionMagazine </title>
 <link href="css/styleVM.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="js/indexVM.js"></script>
+<script type="text/javascript" src="js/indexVM3.js" deter></script>
 </head>
     <body>
         <header>
@@ -62,16 +62,15 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Biology </div>
-            <img src="images/dinosaurs.jpg">
-            <h3> Dinosaurs' Last Day </h3>
+            <div class="tag">Biology</div>
+            <img src="images/bees.jpg">
+            <h3> Bees Lifes </h3>
             <p>
-            Roughly 66 million years ago, the last day of the dinosaurs was marked by a catastrophic asteroid impact near present-day Mexico’s Yucatán Peninsula. The impact caused massive fires, tsunamis, and a global dust cloud that blocked sunlight.<br>
-            <br>
-            <br>
-            This led to a dramatic drop in temperature and disrupted ecosystems worldwide. About 75% of all species, including the non-avian dinosaurs, went extinct.<br>
-            <br>
-            This mass extinction event, known as the Cretaceous–Paleogene extinction, paved the way for mammals to rise and eventually dominate the Earth. The day marks a turning point in Earth’s biological history and continues to fascinate scientists and the public alike.
+              Bees are fascinating insects with complex and highly organized social lives. They live in colonies that function with remarkable efficiency, each bee playing a specific role, from workers and drones to the queen. <br>
+               <br>
+              Their communication is intricate, using dances and pheromones to share information about food sources and hive activities. Bees are also crucial pollinators, supporting ecosystems and agriculture worldwide. <br>
+               <br>
+               Beyond their ecological role, they produce honey, beeswax, and other valuable substances. Observing bees reveals their intelligence, cooperation, and adaptability, making them not only essential to the environment but also a symbol of diligence and harmony in nature.
             </p>
         </div>
                 <div id="interactives">
@@ -130,7 +129,7 @@
       </div>
     </div>
 
-    <div class="stories">
+     <div class="stories">
         <h1 class="storiesTitle"> Top Stories</h1>
         <a href="enVisionMagazine-l3.html" onclick="localStorage.setItem('activeStory', 'charles-dickens');" style="text-decoration: none; color: inherit;">
             <div class="str strTop" data-id="charles-dickens">
@@ -157,7 +156,7 @@
             </div>
         </a>
     </div>
- 
+    
 </section>
 <!-- Footer -->
 
