--- a/enVision-Magazine/enVisionMagazine-b4.html
+++ b/enVision-Magazine/enVisionMagazine-b4.html
@@ -63,15 +63,14 @@
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Biology </div>
-            <img src="images/dinosaurs.jpg">
-            <h3> Dinosaurs' Last Day </h3>
+            <img src="images/tallest-plant.jpg">
+            <h3> The Tallest Plants on Earth </h3>
             <p>
-            Roughly 66 million years ago, the last day of the dinosaurs was marked by a catastrophic asteroid impact near present-day Mexico’s Yucatán Peninsula. The impact caused massive fires, tsunamis, and a global dust cloud that blocked sunlight.<br>
+            Earth’s tallest plants are the majestic coast redwoods of California, reaching heights of over 115 meters. These ancient trees, some over 2,000 years old, thrive in moist coastal climates where fog provides essential water.<br>
             <br>
+            Their towering presence creates unique ecosystems, offering shelter for countless species. Beyond their size, redwoods play a crucial role in absorbing carbon, helping regulate Earth’s climate. <br>
             <br>
-            This led to a dramatic drop in temperature and disrupted ecosystems worldwide. About 75% of all species, including the non-avian dinosaurs, went extinct.<br>
-            <br>
-            This mass extinction event, known as the Cretaceous–Paleogene extinction, paved the way for mammals to rise and eventually dominate the Earth. The day marks a turning point in Earth’s biological history and continues to fascinate scientists and the public alike.
+            They inspire awe as natural wonders, reminding us of nature’s resilience and grandeur. Protecting these giants is vital, as they are endangered by logging and climate change. Redwoods stand as living monuments to time and ecological balance.
             </p>
         </div>
                 <div id="interactives">
