--- a/enVision-Magazine/enVisionMagazine-b5.html
+++ b/enVision-Magazine/enVisionMagazine-b5.html
@@ -63,15 +63,14 @@
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Biology </div>
-            <img src="images/dinosaurs.jpg">
-            <h3> Dinosaurs' Last Day </h3>
+            <img src="images/haast.jpg">
+            <h3> The Haast Eagle: Giant of the Skies </h3>
             <p>
-            Roughly 66 million years ago, the last day of the dinosaurs was marked by a catastrophic asteroid impact near present-day Mexico’s Yucatán Peninsula. The impact caused massive fires, tsunamis, and a global dust cloud that blocked sunlight.<br>
+           The Haast eagle, native to New Zealand, was the largest eagle known to exist, with wingspans up to three meters and powerful talons capable of hunting giant moa birds.<br>
             <br>
+            Extinct for around 600 years, it lived in harmony with New Zealand’s unique ecosystems until human arrival and moa extinction led to its decline. Revered in Māori legend as the Pouakai, the eagle symbolized strength and danger. <br>
             <br>
-            This led to a dramatic drop in temperature and disrupted ecosystems worldwide. About 75% of all species, including the non-avian dinosaurs, went extinct.<br>
-            <br>
-            This mass extinction event, known as the Cretaceous–Paleogene extinction, paved the way for mammals to rise and eventually dominate the Earth. The day marks a turning point in Earth’s biological history and continues to fascinate scientists and the public alike.
+            Its extinction highlights the delicate balance between predators, prey, and human influence. The Haast eagle remains a striking example of nature’s extremes, blending power and vulnerability in Earth’s evolutionary history.
             </p>
         </div>
                 <div id="interactives">
