--- a/enVision-Magazine/enVisionMagazine-c4.html
+++ b/enVision-Magazine/enVisionMagazine-c4.html
@@ -62,16 +62,15 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Biology </div>
-            <img src="images/dinosaurs.jpg">
-            <h3> Dinosaurs' Last Day </h3>
+            <div class="tag">Chemistry </div>
+            <img src="images/baghdad-battery.jpg">
+            <h3> The Baghdad Battery: Ancient Chemistry Mystery </h3>
             <p>
-            Roughly 66 million years ago, the last day of the dinosaurs was marked by a catastrophic asteroid impact near present-day Mexico’s Yucatán Peninsula. The impact caused massive fires, tsunamis, and a global dust cloud that blocked sunlight.<br>
+            Discovered near Baghdad and dating to around 200 BCE, the Baghdad Battery is a puzzling artifact resembling a clay jar with copper and iron components.<br>
             <br>
+            Some scholars believe it could have been used as a primitive battery, generating small amounts of electricity, though its true purpose remains debated. If it was indeed an electrical device, it would suggest that ancient civilizations possessed knowledge far beyond what is typically assumed. <br>
             <br>
-            This led to a dramatic drop in temperature and disrupted ecosystems worldwide. About 75% of all species, including the non-avian dinosaurs, went extinct.<br>
-            <br>
-            This mass extinction event, known as the Cretaceous–Paleogene extinction, paved the way for mammals to rise and eventually dominate the Earth. The day marks a turning point in Earth’s biological history and continues to fascinate scientists and the public alike.
+            Others argue it may have served as a storage container. The Baghdad Battery symbolizes both the ingenuity of ancient peoples and the mysteries of lost technologies still unexplained today.
             </p>
         </div>
                 <div id="interactives">
