--- a/enVision-Magazine/enVisionMagazine-c5.html
+++ b/enVision-Magazine/enVisionMagazine-c5.html
@@ -62,16 +62,15 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Biology </div>
-            <img src="images/dinosaurs.jpg">
-            <h3> Dinosaurs' Last Day </h3>
+            <div class="tag">Chemistry </div>
+            <img src="images/artificial-fertilizer.jpg">
+            <h3> Artificial Fertilizer: An Invention that Fed Millions</h3>
             <p>
-            Roughly 66 million years ago, the last day of the dinosaurs was marked by a catastrophic asteroid impact near present-day Mexico’s Yucatán Peninsula. The impact caused massive fires, tsunamis, and a global dust cloud that blocked sunlight.<br>
+           In the early 20th century, Fritz Haber and Carl Bosch developed a process to synthesize ammonia from nitrogen and hydrogen, leading to the invention of artificial fertilizers.<br>
             <br>
+            This breakthrough, known as the Haber-Bosch process, allowed agriculture to produce food on an unprecedented scale, preventing famines and supporting population growth. Artificial fertilizers boosted crop yields worldwide, saving countless lives. <br>
             <br>
-            This led to a dramatic drop in temperature and disrupted ecosystems worldwide. About 75% of all species, including the non-avian dinosaurs, went extinct.<br>
-            <br>
-            This mass extinction event, known as the Cretaceous–Paleogene extinction, paved the way for mammals to rise and eventually dominate the Earth. The day marks a turning point in Earth’s biological history and continues to fascinate scientists and the public alike.
+            However, their use also brought environmental challenges, such as soil depletion and water pollution. This invention stands as both a triumph of chemistry and a reminder of the balance needed between technological progress and ecological responsibility in feeding humanity.
             </p>
         </div>
                 <div id="interactives">
